turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:3: error: not found: value c
      qcircle(c)
              ^DiskFour:5: error: not found: value c
        case 2 => c=Color.red;
                  ^DiskFour:6: error: not found: value c
        case 3=> c=Color.yellow;
                 ^DiskFour:7: error: not found: value c
        case 4=> c=Color.magenta;
                 ^DiskFour:8: error: not found: value c
        case _=> c=Color.black
                 ^