turtleart.diskfour.DiskFour.scala.code
override def run() {
    for(i<-1 to 4){
      qcircle(c)
      i match{
        case 2 => c=Color.red;
        case 3=> c=Color.yellow;
        case 4=> c=Color.magenta;
        case _=> c=Color.black
      }
      
}
}
    def qcircle(c:Color){
    	setColor(c)
    	for(j<-1 to 90){
    		forward(100);
    		backward(100);
    		right(1);
      }
    }